--- a/assets/sass/components/_state.scss
+++ b/assets/sass/components/_state.scss
@@ -5,6 +5,10 @@
     .i-hidden-bar {
       display: block;
     }
+
+    .i-bar-list {
+      display: none;
+    }
   }
 
   @media screen and (min-width: 40rem) {
